--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
 APScheduler==3.11.0
-blinker==1.9.0
+backports.zoneinfo==0.2.1
+blinker==1.8.2
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
-Flask==3.1.0
+flask==3.0.3
 Flask-APScheduler==1.13.1
 idna==3.10
+importlib-metadata==8.5.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
+jinja2==3.1.4
+MarkupSafe==2.1.5
 python-dateutil==2.9.0.post0
 requests==2.32.3
 six==1.17.0
 tzlocal==5.2
 urllib3==2.2.3
-Werkzeug==3.1.3
+werkzeug==3.0.6
+zipp==3.20.2
